# WES_Hackathon_2025

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults
GUI_ideas_unfinished/: esp32_gui.sll  esp32_gui.spj
components/BSP/: CMakeLists.txt  TCRT5000.c  hcsr04.c
components/BSP/include/: TCRT5000.h  (+1 more)
components/gui/: .gitignore  CMakeLists.txt  Kconfig  README.md  component.mk  gui.c  gui.h
components/gui/squareline/project/: CMakeLists.txt  esp32_gui.sll  esp32_gui.spj  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_queue.c  ui_queue.h
components/gui/squareline/project/assets/: ui_font_Font1.c  ui_font_Font1.fcfg  ui_font_FontStocks.fcfg  ui_font_PizzaFont.fcfg  ui_font_PizzaFontSmall.fcfg
components/gui/squareline/project/fonts/: ui_font_FontStocks.c  ui_font_PizzaFont.c  ui_font_PizzaFontSmall.c
components/gui/squareline/project/images/: ui_img_arc_big_2_png.c  ui_img_arc_big_png.c  ui_img_arc_mid_2_png.c  ui_img_arc_mid_png.c  ui_img_arc_small_2_png.c  ui_img_arc_small_png.c  ui_img_card_back_png.c  ui_img_card_cherry_png.c  ui_img_card_grape_png.c  ui_img_card_lemon_png.c  ui_img_card_waterlemon_png.c  ui_img_casino_back_png.c  ui_img_casino_button_png.c  ui_img_spin_scroll_png.c  ui_img_tesla_2_png.c  ui_img_tesla_png.c  ui_img_wood_3_bg_png.c
components/gui/squareline/project/screens/: ui_CasinoScreen.c  ui_Home_Scr.c  ui_Screen1.c  ui_StocksScreen.c
components/hardware/: CMakeLists.txt  hardware.c  hardware.h  hcsr04.c  hcsr04.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: app_main.c  main.h
(+1 files in other folders)
